Fix spacing on waybar tray

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -42,10 +42,6 @@
   margin: 0 7.5px;
 }
 
-#custom-expand-icon {
-  margin-right: 12px;
-}
-
 tooltip {
   padding: 2px;
 }
